--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
+streamlit==1.26.0
 numpy
 pandas
+scikit-learn
+tensorflow==2.14.0
 opencv-python
 nibabel
-scikit-learn
-tensorflow
-matplotlib
 pywavelets
 scikit-image
-joblib
 lightgbm
+joblib
+
